# band-aid

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zero/bandaid/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zero/bandaid/: HotPatch.java
app/src/main/java/com/zero/bandaid/patch/: ApkOrJarPatch.java  DexPatch.java  Patch.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/zero/bandaid/: ExampleUnitTest.java
band-aid/: build.gradle
band-aid-jni/: ArtBridge.cpp
band-aid-jni/art/: art.cpp  art_method_replace_5_0.cpp  art_method_replace_5_1.cpp
band-aid/lib-jni/dalvik/: dalvik.cpp
band-aid/lib-jni/jni/: Application.mk
band-aid/src/main/: AndroidManifest.xml
band-aid/src/main/java/com/zero/bandaid/: Bridge.java  HotFix.java
example/: build.gradle
example/src/main/: AndroidManifest.xml
example/src/main/java/com/zero/example/: MainActivity.java
example/src/main/res/layout/: activity_main.xml
lib/src-jni/: ArtBridge.cpp  ArtBridge.h  Bridge.h  CMakeLists.txt  DalvikBridge.cpp  DalvikBridge.h  HotPatch.cpp  Patch.cpp  common.h
lib/src-jni/art/: art.cpp  art.h  art_method_replace.cpp  art_method_replace_6_0.cpp
lib/src-jni/dalvik/: dalvik.h  dalvik_core.h
lib/src-jni/jni/: Android.mk
lib/src-jni/jni/prebuilt/: Android.mk
lib/src-jni/jni/prebuilt/include/: inlineHook.h
lib/src-jni/jni/src/: Android.mk
lib/src/main/java/com/zero/bandaid/: AppUtil.java  AutoCrashHandler.java  Bridge.java  Env.java  HotFix.java
(+11 files in other folders)
